--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.16",
+    "chai": "^4.4.1",
+    "mocha": "^10.4.0",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5"
   }
 }
