--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "valo-api",
-  "version": "0.0.2",
-  "description": "An updated javascript wrapper for api.henrikdev.xyz",
-  "main": "./src/index.js",
+  "version": "0.1.0",
+  "description": "An updated Valorant api wrapper based on Henrik-3's unofficial-valorant-api, written in TypeScript",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "test": "mocha -r ts-node/register tests/**/*.test.ts --timeout 60000 --exit"
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.6",
     "chai": "^4.4.1",
     "mocha": "^10.4.0",
     "ts-node": "^10.9.2",
