--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
     "chai": "^4.4.1",
+    "dotenv": "^16.4.5",
     "mocha": "^10.4.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
